--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <div class="container">
       <div class="food-menu">
         <h2>Food Menu</h2>
-        <div class="menu">
-          <div class="individual-items"></div>
-        </div>
+        <div class="menu"></div>
       </div>
       <div class="order-summary">
         <h2>Order Summary</h2>
